@@ -53,7 +53,7 @@ Serves aggregated news from 10+ local news publishers in Hong Kong. Made with ‚ù
    ```
 5. Start the server
    ```bash
-   java -server -Xms240m -Xmx480m -Xss512k -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -Dfile.encoding=UTF-8 -classpath ./build/libs/ com.github.ayltai.hknews.MainApplication
+   java -server -Xverify:none -Xms320m -Xmx960m -Xss512k -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark -Dfile.encoding=UTF-8 -jar ./build/libs/hknews-1.0.0.jar
    ```
 6. Test specific API
    ```bash
